# Prueba_Yamaha_Final

./: .gitignore  PRUEBA TECNICA INGENIERO MACHINE LEARNING.docx  README.md  dvc.yaml  model.pkl  params.yaml  prepare.py  pyproject.toml
.ipynb_checkpoints/: Yamaha-checkpoint.ipynb
data/: Data.xlsx  prepared_data.csv
metrics/: scores.json
src/: evaluate.py  train.py
