[project]
name = "prueba-yamaha"
version = "0.1.0"
description = ""
authors = [
    {name = "JuanMarin_Cun",email = "juan_marin@cun.edu.co"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "dvc (>=3.65.0,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "dvclive (>=3.49.0,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
